// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > 'createPet with seed 222' 1`] = `
"/**
 * @description Null response
 */
export function CreatePets201(): NonNullable<CreatePets201> {
  faker.seed([222])
  return undefined
}

/**
 * @description unexpected error
 */
export function CreatePetsError(): NonNullable<CreatePetsError> {
  faker.seed([222])
  return Error()
}

export function CreatePetsMutationRequest(): NonNullable<CreatePetsMutationRequest> {
  faker.seed([222])
  return { name: faker.string.alpha(), tag: faker.string.alpha() }
}

export function CreatePetsMutationResponse(): NonNullable<CreatePetsMutationResponse> {
  faker.seed([222])
  return undefined
}
"
`;

exports[`OperationGenerator > 'createPet with unknownType any' 1`] = `
"/**
 * @description Null response
 */
export function CreatePets201(): NonNullable<CreatePets201> {
  return undefined
}

/**
 * @description unexpected error
 */
export function CreatePetsError(): NonNullable<CreatePetsError> {
  return Error()
}

export function CreatePetsMutationRequest(): NonNullable<CreatePetsMutationRequest> {
  return { name: faker.string.alpha(), tag: faker.string.alpha() }
}

export function CreatePetsMutationResponse(): NonNullable<CreatePetsMutationResponse> {
  return undefined
}
"
`;

exports[`OperationGenerator > 'createPet' 1`] = `
"/**
 * @description Null response
 */
export function CreatePets201(): NonNullable<CreatePets201> {
  return undefined
}

/**
 * @description unexpected error
 */
export function CreatePetsError(): NonNullable<CreatePetsError> {
  return Error()
}

export function CreatePetsMutationRequest(): NonNullable<CreatePetsMutationRequest> {
  return { name: faker.string.alpha(), tag: faker.string.alpha() }
}

export function CreatePetsMutationResponse(): NonNullable<CreatePetsMutationResponse> {
  return undefined
}
"
`;

exports[`OperationGenerator > 'deletePet' 1`] = `
"export function DeletePetsPetidMutationResponse(): NonNullable<DeletePetsPetidMutationResponse> {
  return undefined
}
"
`;

exports[`OperationGenerator > 'getPets' 1`] = `
"export function ListPetsQueryParams(): NonNullable<ListPetsQueryParams> {
  return { limit: faker.string.alpha() }
}

/**
 * @description A paged array of pets
 */
export function ListPets200(): NonNullable<ListPets200> {
  return Pets()
}

/**
 * @description unexpected error
 */
export function ListPetsError(): NonNullable<ListPetsError> {
  return Error()
}

/**
 * @description A paged array of pets
 */
export function ListPetsQueryResponse(): NonNullable<ListPetsQueryResponse> {
  return Pets()
}
"
`;

exports[`OperationGenerator > 'showPetById' 1`] = `
"export function ShowPetByIdPathParams(): NonNullable<ShowPetByIdPathParams> {
  return { petId: faker.string.alpha(), testId: faker.string.alpha() }
}

/**
 * @description Expected response to a valid request
 */
export function ShowPetById200(): NonNullable<ShowPetById200> {
  return Pet()
}

/**
 * @description unexpected error
 */
export function ShowPetByIdError(): NonNullable<ShowPetByIdError> {
  return Error()
}

/**
 * @description Expected response to a valid request
 */
export function ShowPetByIdQueryResponse(): NonNullable<ShowPetByIdQueryResponse> {
  return Pet()
}
"
`;
